# lagos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
lagos/: __main__.py  bot.py  chat.py  cli.py  client.py  core.py  records.py  server.py  store.py  tui.py  utils.py
lagos/data_source/: __init__.py  base.py  wikipedia.py
lagos/pipelines/: __init__.py  base.py  conversational.py  question_answering.py  summarization.py
