[project]
name = "lagos"
version = "0.1.0"
description = ""
authors = [
    {name = "Bitjockey", email = "bitjockey@jackpoint.network"},
]
dependencies = [
    "requests>=2.27.1",
    "setuptools<61",
    "pandoc>=2.2",
    "plumbum>=1.7.2",
    "ply>=3.11",
    "click>=8.1.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
lagos = "lagos.cli:main"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "responses>=0.20.0",
]
dev = [
    "black>=22.3.0",
    "bpython>=0.22.1",
]

[tool.pdm.scripts]
test = "pytest tests/"
format = "black ."

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
