[project]
name = "lagos"
version = "0.1.0"
description = ""
authors = [
    {name = "Bitjockey", email = "bitjockey@jackpoint.network"},
]
dependencies = [
    "requests>=2.27.1",
    "setuptools<61",
    "click>=8.1.3",
    "wikipedia-api>=0.5.4",
    "websockets>=10.3",
    "python-dotenv>=0.20.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
lagos = "lagos.cli:cli"

[project.optional-dependencies]
macos = [
    "tensorflow-macos>=2.8.0",
    "tensorflow-metal>=0.4.0",
    "spacy[apple]>=3.3.0",
]
nlp = [
    "tokenizers>=0.12.1",
    "transformers>=4.18.0",
    "datasets>=1.18.3",
]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]
dev = [
    "black>=22.3.0",
    "bpython>=0.22.1",
    "watchdog[watchmedo]>=2.1.7",
    "ipython>=8.3.0"]

[tool.pdm.scripts]
download-spacy-models = "curl -L -O https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.3.0/en_core_web_md-3.3.0-py3-none-any.whl"
conversational = "watchmedo auto-restart --pattern '*.py' --recursive --signal SIGTERM lagos serve 'conversational'"
test = "pytest tests/"
format = "black ."

[tool.pyright]
extraPaths = ["__pypackages__/<major.minor>/lib/"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
